--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  background: #f1f1f1;
+  height: 100vh;
+  margin: 0;
+  background: linear-gradient(to bottom, #f5f4f4 60%, #fbeed9 100%);
+  background-repeat: no-repeat;
+}
+
+* {
+  font-family: "Poppins", sans-serif;
 }
