--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 body {
-  height: 100vh;
+  height: 100%;
   margin: 0;
   background: linear-gradient(to bottom, #f5f4f4 60%, #fbeed9 100%);
   background-repeat: no-repeat;
